--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-i# These are the contributors to the repository.
+# This file lists all contributors to the repository.
 
 Stanley Anyumba <esanyumba@gmail.com>
 Margaret Wangechi <wanjirumargaret394@gmail.com>
